add possibility to check if password has ever been pwned

--- a/generator/templates/generator/password.html
+++ b/generator/templates/generator/password.html
@@ -18,4 +18,9 @@
     <br>
     <br>
     <a href="{% url 'about' %}" class="btn btn-warning" >about </a>
+    <br>
+    <br>
+    <a href="{% url 'password_validation' %}" class="btn btn-warning">check if password has been pwned</a>
+    
+
 </div>
