--- a/generator/templates/generator/about.html
+++ b/generator/templates/generator/about.html
@@ -5,9 +5,9 @@
      {% load static %}  
     <script src="{% static '/js/script.js' %}" type="text/javascript"></script>  
 </head> 
-<h1> Abut us </h1>
+<h1> About us </h1>
 <h2>
-    hello, my name is Marcela :)
+    this website allows You to generate random passwords as well as check if this password has ever been pwned in a very secure way.
 </h2>
 <br>
 <a href="{% url 'home' %}" class="btn btn-warning">home</a>
