--- a/generator/templates/generator/home.html
+++ b/generator/templates/generator/home.html
@@ -7,7 +7,7 @@
 </head> 
 <body>
 <div class = "container text-center">
-    <h2>This is a new homepage</h2>
+    <h2>random password generator</h2>
     <form action= "{% url 'password' %}">
         <select name="lenght">
             <option value='6'>6</option>
